<resources>
    <string name="app_name">News Burst</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="headlines_fragment">Hello Headlines fragment</string>
    <string name="health_fragment">Hello Health fragment</string>
    <string name="sports_fragment">Hello Sports fragment</string>
    <string name="tech_fragment">Hello Technology fragment</string>
    <string name="entertainment_fragment">Hello Entertainment fragment</string>

    <string name="headlines">Headlines</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="explore">Explore</string>
    <string name="test">45 Lakh Affected In Massive Air India Data Breach Including Credit Cards - NDTV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>