<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/headlinesFragment2"
        android:enabled="true"
        android:icon="@drawable/headlines"
        android:title="@string/headlines"/>
    <item
        android:id="@+id/healthFragment2"
        android:enabled="true"
        android:icon="@drawable/health"
        android:title="@string/health"/>

    <item
        android:id="@+id/sportsFragment2"
        android:enabled="true"
        android:icon="@drawable/sports"
        android:title="@string/sports"/>
    <item
        android:id="@+id/technologyFragment2"
        android:enabled="true"
        android:icon="@drawable/technology"
        android:title="@string/technology"/>

    <item
        android:id="@+id/entertainmentFragment2"
        android:enabled="true"
        android:icon="@drawable/entertainment"
        android:title="@string/explore"/>
</menu>